--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/math-util
 excludes=
+file.reference.hamcrest-core-1.3.jar=hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -49,7 +51,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -72,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=math-util
-main.class=math.util.MathUtil
+main.class=com.fu.mathutil.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
